<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradation_background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.register.RegisterFragmen">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/bg_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/bg_register"
            android:layout_marginTop="89dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_register"
            app:layout_constraintBottom_toTopOf="@+id/bg_login"
            app:layout_constraintEnd_toEndOf="@+id/bg_login"
            app:layout_constraintStart_toStartOf="@+id/bg_login"
            app:layout_constraintTop_toTopOf="@+id/bg_login" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_namaFrom"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:hint="Nama"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="@id/bg_login"
            app:layout_constraintStart_toStartOf="@id/bg_login"
            app:layout_constraintTop_toBottomOf="@id/iv_logo">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_namaFrom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_fromEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:hint="Email"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="@id/bg_login"
            app:layout_constraintStart_toStartOf="@id/bg_login"
            app:layout_constraintTop_toBottomOf="@id/til_namaFrom">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_fromEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_FromUsername"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:hint="Username"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="@id/bg_login"
            app:layout_constraintStart_toStartOf="@id/bg_login"
            app:layout_constraintTop_toBottomOf="@id/til_fromEmail">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_fromUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_fromPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:hint="Password"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true"
            app:layout_constraintEnd_toEndOf="@id/bg_login"
            app:layout_constraintStart_toStartOf="@id/bg_login"
            app:layout_constraintTop_toBottomOf="@id/til_FromUsername">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_fromPassword"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_confirm_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:hint="Confirm Password"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true"
            app:layout_constraintEnd_toEndOf="@id/bg_login"
            app:layout_constraintStart_toStartOf="@id/bg_login"
            app:layout_constraintTop_toBottomOf="@id/til_fromPassword">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_confirm_password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_register"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:backgroundTint="@color/puple_uyee"
            android:text="Register"
            app:layout_constraintBottom_toBottomOf="@+id/bg_login"
            app:layout_constraintEnd_toEndOf="@+id/bg_login"
            app:layout_constraintStart_toStartOf="@+id/bg_login"
            app:layout_constraintTop_toBottomOf="@+id/bg_login" />

        <TextView
            android:id="@+id/tv_belom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="Sudah Punya Akun?"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/btn_login"
            app:layout_constraintStart_toStartOf="@id/btn_login"
            app:layout_constraintTop_toBottomOf="@+id/btn_register" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:backgroundTint="@color/puple_uyee"
            android:layout_marginBottom="16dp"
            android:text="Login"
            app:layout_constraintTop_toBottomOf="@id/tv_belom"
            app:layout_constraintEnd_toEndOf="@id/btn_register"
            app:layout_constraintStart_toStartOf="@id/btn_register"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>